; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/rtmp-services/extr_rtmp-common.c_service_selected.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/rtmp-services/extr_rtmp-common.c_service_selected.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"service\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"server\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @service_selected to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @service_selected(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = call i8* @obs_data_get_string(i32* %13, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store i8* %14, i8** %8, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = call i32* @obs_properties_get_param(i32* %15)
  store i32* %16, i32** %9, align 8
  %17 = load i8*, i8** %8, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %23

19:                                               ; preds = %3
  %20 = load i8*, i8** %8, align 8
  %21 = load i8, i8* %20, align 1
  %22 = icmp ne i8 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %19, %3
  store i32 0, i32* %4, align 4
  br label %61

24:                                               ; preds = %19
  %25 = load i32*, i32** %9, align 8
  %26 = load i8*, i8** %8, align 8
  %27 = call i32* @find_service(i32* %25, i8* %26, i8** %11)
  store i32* %27, i32** %10, align 8
  %28 = load i32*, i32** %10, align 8
  %29 = icmp ne i32* %28, null
  br i1 %29, label %47, label %30

30:                                               ; preds = %24
  %31 = load i32*, i32** %7, align 8
  %32 = call i8* @obs_data_get_string(i32* %31, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  store i8* %32, i8** %12, align 8
  %33 = load i32*, i32** %6, align 8
  %34 = load i8*, i8** %8, align 8
  %35 = load i8*, i8** %8, align 8
  %36 = call i32 @obs_property_list_insert_string(i32* %33, i32 0, i8* %34, i8* %35)
  %37 = load i32*, i32** %6, align 8
  %38 = call i32 @obs_property_list_item_disable(i32* %37, i32 0, i32 1)
  %39 = load i32*, i32** %5, align 8
  %40 = call i32* @obs_properties_get(i32* %39, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  store i32* %40, i32** %6, align 8
  %41 = load i32*, i32** %6, align 8
  %42 = load i8*, i8** %12, align 8
  %43 = load i8*, i8** %12, align 8
  %44 = call i32 @obs_property_list_insert_string(i32* %41, i32 0, i8* %42, i8* %43)
  %45 = load i32*, i32** %6, align 8
  %46 = call i32 @obs_property_list_item_disable(i32* %45, i32 0, i32 1)
  store i32 1, i32* %4, align 4
  br label %61

47:                                               ; preds = %24
  %48 = load i8*, i8** %11, align 8
  %49 = icmp ne i8* %48, null
  br i1 %49, label %50, label %55

50:                                               ; preds = %47
  %51 = load i8*, i8** %11, align 8
  store i8* %51, i8** %8, align 8
  %52 = load i32*, i32** %7, align 8
  %53 = load i8*, i8** %8, align 8
  %54 = call i32 @obs_data_set_string(i32* %52, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* %53)
  br label %55

55:                                               ; preds = %50, %47
  %56 = load i32*, i32** %5, align 8
  %57 = call i32* @obs_properties_get(i32* %56, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %58 = load i32*, i32** %10, align 8
  %59 = load i8*, i8** %8, align 8
  %60 = call i32 @fill_servers(i32* %57, i32* %58, i8* %59)
  store i32 1, i32* %4, align 4
  br label %61

61:                                               ; preds = %55, %30, %23
  %62 = load i32, i32* %4, align 4
  ret i32 %62
}

declare dso_local i8* @obs_data_get_string(i32*, i8*) #1

declare dso_local i32* @obs_properties_get_param(i32*) #1

declare dso_local i32* @find_service(i32*, i8*, i8**) #1

declare dso_local i32 @obs_property_list_insert_string(i32*, i32, i8*, i8*) #1

declare dso_local i32 @obs_property_list_item_disable(i32*, i32, i32) #1

declare dso_local i32* @obs_properties_get(i32*, i8*) #1

declare dso_local i32 @obs_data_set_string(i32*, i8*, i8*) #1

declare dso_local i32 @fill_servers(i32*, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
